# rust-auth-test

./: Cargo.toml  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal
migrations/: 20240319181401_init.sql
src/: main.rs  router.rs
src/auth/: handlers.rs  mod.rs  session.rs
src/users/: handlers.rs  mod.rs  models.rs  repository.rs
